# YandexMusicRichPresence

./: .gitignore  README.md  main.py  pyproject.toml
src/api/: router.py  schemas.py  service.py
src/rpc/: service.py
src/settings/: settings.py
static/resources/js/: rich_presence.js
